K8S_Chat-main/k8s/monogo-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: microservices
spec:
  serviceName: "mongo"
  selector:
    matchLabels:
      app: mongo
  replicas: 1

  template:
    metadata:
      labels:
        app: mongo

    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo
        image: mongo:6.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-pvc
          mountPath: /data/db
        - name: mongo-init
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mongo-init
          configMap:
            name: mongo-init-script
      resources:
        requests:
          cpu: "100m"
          memory: "256Mi"
        limits:
          cpu: "300m"
          memory: "512Mi"

  volumeClaimTemplates:
    - metadata:
        name: mongo-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: microservices
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
